# par-fractal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  hacker_news_release.md  handoff.md  index.html  plan.md  reddit_release.md  release.md  todos.md
.github/workflows/: ci.yml  deploy-web.yml  publish-cask.yml  publish-crates.yml  publish-homebrew-cask-core.yml  publish-homebrew-cask-run.yml  release.yml  test-dispatch.yml
docs/: ARCHITECTURE.md  CONTROLS.md  FEATURES.md  FRACTALS2D.md  FRACTALS3D.md  QUICKSTART.md  README.md
homebrew/Casks/: par-fractal.rb
icons/: par-fractal.icns  site.webmanifest
scripts/: convert_xfractint_maps.py
src/: camera.rs  command_palette.rs  lib.rs  lod.rs  main.rs  renderer.rs.bak  video_recorder.rs  web_main.rs
src/app/: camera_transition.rs  capture.rs  capture_web.rs  input.rs  mod.rs  persistence.rs  render.rs  update.rs
src/fractal/: mod.rs  palettes.rs  presets.rs  settings.rs  tests.rs  types.rs  ui_state.rs
src/platform/: mod.rs
src/platform/native/: capture.rs  file_dialog.rs  mod.rs  storage.rs
src/platform/web/: capture.rs  file_dialog.rs  mod.rs  storage.rs
src/renderer/: compute.rs  initialization.rs  mod.rs  uniforms.rs  update.rs
src/shaders/: attractor_compute.wgsl  attractor_display.wgsl  buddhabrot_compute.wgsl  buddhabrot_copy.wgsl  fractal.wgsl  postprocess.wgsl
src/ui/: command.rs  history.rs  mod.rs  monitor.rs  overlays.rs  tests.rs  toast.rs  toast_ui.rs
tests/: integration_tests.rs
