[package]
name = "par-fractal"
version = "0.6.0"
edition = "2021"
authors = ["Paul Robello <probello@gmail.com>"]
description = "Cross-platform GPU-accelerated fractal renderer with 2D and 3D support"
readme = "README.md"
license = "MIT"
repository = "https://github.com/paulrobello/par-fractal"
homepage = "https://github.com/paulrobello/par-fractal"
documentation = "https://github.com/paulrobello/par-fractal/blob/main/README.md"
keywords = ["fractal", "gpu", "graphics", "visualization", "renderer"]
categories = ["graphics", "multimedia", "visualization"]
default-run = "par-fractal"
exclude = [
    "*.png",
    "*.jpg",
    "*.mp4",
    "*.webm",
    "*.gif",
    "screenshots/",
    "images/",
    ".github/",
    ".gitignore",
    "CLAUDE.md",
    "lod.md",
    "handoff.md",
    "plan.md",
    "dist/",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:pollster",
    "dep:directories",
    "dep:rfd",
    "dep:open",
    "dep:crossbeam-channel",
    "dep:chrono",
    "dep:env_logger",
]
web = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:console_log",
    "dep:console_error_panic_hook",
    "dep:gloo-timers",
    "dep:getrandom",
]

[[bin]]
name = "par-fractal"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
# Core graphics
wgpu = "27"
winit = "0.30"

# Math
glam = "0.30"

# UI
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
egui-wgpu = "0.33"
egui-winit = { version = "0.33", default-features = false, features = ["links"] }

# Utilities
bytemuck = { version = "1.24", features = ["derive"] }
log = "0.4"
rand = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
base64 = "0.22"
web-time = "1.1"  # Cross-platform time for native and WASM

# Native-only dependencies (optional, enabled by "native" feature)
pollster = { version = "0.4", optional = true }
directories = { version = "6.0", optional = true }
rfd = { version = "0.16", optional = true }
open = { version = "5", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
chrono = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

# Web-only dependencies (optional, enabled by "web" feature)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-timers = { version = "0.3", optional = true, features = ["futures"] }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }

[dependencies.web-sys]
version = "0.3.82"
optional = true
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Storage",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "File",
    "FileList",
    "FileReader",
    "console",
    # WebCodecs API for video encoding
    "VideoEncoder",
    "VideoEncoderInit",
    "VideoEncoderConfig",
    "VideoEncoderEncodeOptions",
    "VideoFrame",
    "VideoFrameInit",
    "VideoFrameBufferInit",
    "VideoPixelFormat",
    "EncodedVideoChunk",
    "EncodedVideoChunkType",
    "EncodedVideoChunkMetadata",
    "CodecState",
    "VideoColorSpace",
    "VideoColorSpaceInit",
    "Performance",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
